[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/world/objects/Tile.gd" type="Script" id=1]
[ext_resource path="res://assets/world/WorldTiles.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/UnitEggFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/LifeUI.tres" type="Texture" id=4]
[ext_resource path="res://assets/ui/AttackUI.tres" type="Texture" id=5]
[ext_resource path="res://assets/UITheme.tres" type="Theme" id=6]
[ext_resource path="res://assets/units/DeathAnimation.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Tile" type="Area2D"]
monitorable = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DeathAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -4 )
frames = SubResource( 15 )
speed_scale = 3.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
z_index = 2

[node name="InfoPanel" type="Panel" parent="Sprite"]
visible = false
margin_left = -58.0
margin_top = -2.0
margin_right = -14.0
margin_bottom = 10.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Sprite/InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="MarginContainer" parent="Sprite/InfoPanel/HBoxContainer"]
margin_right = 22.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Sprite/InfoPanel/HBoxContainer/Life"]
margin_right = 22.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/separation = 2

[node name="CenterContainer" type="CenterContainer" parent="Sprite/InfoPanel/HBoxContainer/Life/HBoxContainer"]
margin_right = 8.0
margin_bottom = 14.0

[node name="TextureRect" type="TextureRect" parent="Sprite/InfoPanel/HBoxContainer/Life/HBoxContainer/CenterContainer"]
margin_top = 3.0
margin_right = 8.0
margin_bottom = 11.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="LifeUI" type="Label" parent="Sprite/InfoPanel/HBoxContainer/Life/HBoxContainer"]
margin_left = 10.0
margin_right = 20.0
margin_bottom = 14.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "10"

[node name="Attack" type="MarginContainer" parent="Sprite/InfoPanel/HBoxContainer"]
margin_left = 22.0
margin_right = 44.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Sprite/InfoPanel/HBoxContainer/Attack"]
margin_right = 22.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/separation = 2

[node name="CenterContainer" type="CenterContainer" parent="Sprite/InfoPanel/HBoxContainer/Attack/HBoxContainer"]
margin_right = 8.0
margin_bottom = 14.0

[node name="TextureRect" type="TextureRect" parent="Sprite/InfoPanel/HBoxContainer/Attack/HBoxContainer/CenterContainer"]
margin_top = 3.0
margin_right = 8.0
margin_bottom = 11.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="AttackUI" type="Label" parent="Sprite/InfoPanel/HBoxContainer/Attack/HBoxContainer"]
margin_left = 10.0
margin_right = 20.0
margin_bottom = 14.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "10"

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]
